Prevent sticky gallery and sticky image from overlapping
Since one uses custom margin and one doesn't, they cannot be in one
box. Multiple sticky boxes inside a single group do not interact
correctly, we create a new group.

REDMINE-20325

--- a/entry_types/scrolled/package/src/frontend/layouts/TwoColumn.module.css
+++ b/entry_types/scrolled/package/src/frontend/layouts/TwoColumn.module.css
@@ -69,7 +69,7 @@
   --content-max-width: min(var(--content-width), var(--two-column-sticky-content-max-width, 600px));
   position: sticky;
   float: right;
-  clear: right;
+  clear: both;
   top: 33%;
   width: var(--content-width);
 }
